Use mate_de_ var prefixes, reorg var dirs

--- a/defaults/main/overridable/control_ctr.yml
+++ b/defaults/main/overridable/control_ctr.yml
@@ -1,6 +1,6 @@
 # enable sound applets, applications, and Control Center integration
-enable_sound_support: true
+mate_de_enable_sound_support: true
 
 # enable printing applications and Control Center integration
-enable_printing_support: true
+mate_de_enable_printing_support: true
 
