--- a/defaults/main/overridable/mouse.yml
+++ b/defaults/main/overridable/mouse.yml
@@ -1,9 +1,9 @@
 # theme/appearance of mouse pointer
-mouse_pointer_theme: "Adwaita"
+mate_de_mouse_pointer_theme: "Adwaita"
 
 # size of mouse pointer (depending on theme: "24", "32", "48", or "64")
-mouse_pointer_size: "48"
+mate_de_mouse_pointer_size: "48"
 
 # mouse double-click threshold time, in millisec
-mouse_double_click_time: "400"
+mate_de_mouse_double_click_time_ms: "400"
 
