--- a/tasks/func/dconf_force_str.yml
+++ b/tasks/func/dconf_force_str.yml
@@ -12,5 +12,5 @@
         value: "{{ value | string }}"
         state: present
   become: true
-  become_user: "{{ user_name }}"
+  become_user: "{{ mate_de_user_name }}"
 
