--- a/tasks/func/dconf_notify.yml
+++ b/tasks/func/dconf_notify.yml
@@ -14,5 +14,5 @@
         state: present
       notify: "{{ notify_receiver }}"
   become: true
-  become_user: "{{ user_name }}"
+  become_user: "{{ mate_de_user_name }}"
 
