--- a/tasks/config_hw_devices/media_devices.yml
+++ b/tasks/config_hw_devices/media_devices.yml
@@ -3,19 +3,19 @@
     descrip: "For media devices, set auto-mount-devices to '{{ do_auto }}'"
     key: "/org/mate/desktop/media-handling/automount"
     value: "{{ do_auto }}"
-    do_auto: "{{ 'true' if media_auto_mount else 'false' }}"
+    do_auto: "{{ 'true' if mate_de_media_auto_mount else 'false' }}"
 
 - ansible.builtin.include_tasks: func/dconf.yml
   vars:
     descrip: "For media devices, set auto-open-after-mount to '{{ do_auto }}'"
     key: "/org/mate/desktop/media-handling/automount-open"
     value: "{{ do_auto }}"
-    do_auto: "{{ 'true' if media_auto_open else 'false' }}"
+    do_auto: "{{ 'true' if mate_de_media_auto_open else 'false' }}"
 
 - ansible.builtin.include_tasks: func/dconf.yml
   vars:
     descrip: "For media devices, set prompt-to-run-device-apps to '{{ do_auto }}'"
     key: "/org/mate/desktop/media-handling/autorun-never"
     value: "{{ do_auto }}"
-    do_auto: "{{ 'false' if media_prompt_to_run else 'true' }}"
+    do_auto: "{{ 'false' if mate_de_media_prompt_to_run else 'true' }}"
 
