--- a/tasks/config_panels/top_panel.yml
+++ b/tasks/config_panels/top_panel.yml
@@ -1,8 +1,8 @@
 - ansible.builtin.include_tasks: func/dconf.yml
   vars:
-    descrip: "For top panel, set panel-size to {{ top_panel_size }}"
+    descrip: "For top panel, set panel-size to {{ mate_de_top_panel_size }}"
     key: "/org/mate/panel/toplevels/top/size"
-    value: "{{ top_panel_size }}"
+    value: "{{ mate_de_top_panel_size }}"
 
 - ansible.builtin.include_tasks: func/dconf.yml
   vars:
@@ -13,14 +13,14 @@
 
 - ansible.builtin.include_tasks: func/dconf.yml
   vars:
-    descrip: "For top panel, set background-color to '{{ panels_background_color }}'"
+    descrip: "For top panel, set background-color to '{{ mate_de_panels_background_color }}'"
     key: "/org/mate/panel/toplevels/top/background/color"
-    value: "'{{ panels_background_color }}'"
+    value: "'{{ mate_de_panels_background_color }}'"
 
 - ansible.builtin.include_tasks: func/dconf.yml
   vars:
     descrip: "For top panel clock, set time-format to '{{ time_format }}'"
     key: "/org/mate/panel/objects/clock/prefs/format"
     value: "'{{ time_format }}'"
-    time_format: "{{ '24-hour' if top_panel_clock_format_24_hr else '12-hour' }}"
+    time_format: "{{ '24-hour' if mate_de_top_panel_clock_format_24_hr else '12-hour' }}"
 
