--- a/tasks/func/dconf.yml
+++ b/tasks/func/dconf.yml
@@ -12,5 +12,5 @@
         value: "{{ value | default(omit) }}"
         state: present
   become: true
-  become_user: "{{ user_name }}"
+  become_user: "{{ mate_de_user_name }}"
 
