--- a/tasks/func/dconf_empty_list.yml
+++ b/tasks/func/dconf_empty_list.yml
@@ -14,5 +14,5 @@
   vars:
     empty_list_value: "@as []"
   become: true
-  become_user: "{{ user_name }}"
+  become_user: "{{ mate_de_user_name }}"
 
