--- a/tasks/func/dconf_nochange.yml
+++ b/tasks/func/dconf_nochange.yml
@@ -14,5 +14,5 @@
         state: present
       changed_when: false
   become: true
-  become_user: "{{ user_name }}"
+  become_user: "{{ mate_de_user_name }}"
 
