--- a/tasks/install_ctl_ctr/freebsd/network.yml
+++ b/tasks/install_ctl_ctr/freebsd/network.yml
@@ -5,17 +5,19 @@
   become: true
   become_user: root
 
-- name: "In sudo settings, configure user '{{ mate_de_user_name }}'for networkmgr permissions"
-  ansible.builtin.include_role:
-    name: ext/ans_role_config_sudo
-  vars:
-    set_auth_for_user: "{{ user_name }}"
-    auth_cmd_list:
-      - '/sbin/ifconfig'
-      - '/usr/bin/killall'
-      - '/usr/local/bin/networkmgr'
-      - '/usr/local/bin/networkmgr'
-      - '/usr/sbin/service'
-      - '/usr/sbin/wpa_supplicant'
-    req_sudo_password: false
+- name: "Define export var 'mate_de_network_mgr_sudoers_rule'"
+  ansible.builtin.set_fact:
+    mate_de_network_mgr_sudoers_rule:
+      sudoer_name: "{{ user_name }}"
+      sudoer_type: "user"
+      allow_run_on_host: ALL
+      allow_run_as_user: ALL
+      allow_commands:
+        - '/sbin/ifconfig'
+        - '/usr/bin/killall'
+        - '/usr/local/bin/networkmgr'
+        - '/usr/local/bin/networkmgr'
+        - '/usr/sbin/service'
+        - '/usr/sbin/wpa_supplicant'
+      req_passwd: false
 
