--- a/tasks/install_ctl_ctr/freebsd/network.yml
+++ b/tasks/install_ctl_ctr/freebsd/network.yml
@@ -8,6 +8,7 @@
 - name: "Define export var 'mate_de_network_mgr_sudoers_rule'"
   ansible.builtin.set_fact:
     mate_de_network_mgr_sudoers_rule:
+      label: "ansible_mate_de_network_mgr"
       sudoer_name: "{{ mate_de_user_name }}"
       sudoer_type: "user"
       allow_run_on_host: "ALL"
